--- a/XiaomiDolby/res/values/strings.xml
+++ b/XiaomiDolby/res/values/strings.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2018 The LineageOS Project
+
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
+
           http://www.apache.org/licenses/LICENSE-2.0
+
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -13,7 +16,7 @@
 -->
 <resources>
     <!-- App Name -->
-    <string name="app_name">Dolby Manager</string>
+    <string name="app_name">Xiaomi Dolby</string>
 
     <!-- Dolby Atmos -->
     <string name="dolby_title">Dolby Atmos</string>
@@ -32,6 +35,7 @@
     <string name="dolby_bass_enhancer">Bass enhancer</string>
     <string name="dolby_dialogue_enhancer">Dialogue enhancer</string>
     <string name="dolby_virtualizer">Surround virtualizer</string>
+    <string name="dolby_stereo_widening">Stereo widening</string>
     <string name="dolby_volume_leveler">Volume leveler</string>
     <string name="dolby_connect_headphones">Connect headphones</string>
     <string name="dolby_reset_profile">Reset to defaults</string>
@@ -39,11 +43,9 @@
 
     <!-- Dolby Atmos: Sound Profiles -->
     <string name="dolby_profile_dynamic">Dynamic</string>
-    <string name="dolby_profile_movie">Movie</string>
     <string name="dolby_profile_music">Music</string>
-    <string name="dolby_profile_game1">Game1</string>
-    <string name="dolby_profile_game2">Game2</string>
-    <string name="dolby_profile_voice">Voice</string>
+    <string name="dolby_profile_video">Movie / Video</string>
+    <string name="dolby_profile_vocal">Voice</string>
 
     <!-- Dolby Atmos: Equalizer presets -->
     <string name="dolby_preset_default">Default</string>
@@ -54,5 +56,7 @@
     <string name="dolby_preset_hiphop">Hip Hop</string>
     <string name="dolby_preset_blues">Blues</string>
     <string name="dolby_preset_electronic">Electronic</string>
+    <string name="dolby_preset_country">Country</string>
+    <string name="dolby_preset_dance">Dance</string>
     <string name="dolby_preset_metal">Metal</string>
 </resources>
